# motecloud-cli

./: LICENSE  Makefile  README.md  generate_release_assets.py  pyproject.toml
.github/workflows/: release-cli.yml
docs/reference/: cli-install.md
motecloud_cli/: __init__.py  __main__.py  _core.py
packaging/homebrew/: motecloud.rb
scripts/: install-cli.sh  motecloud.sh  sync_cli.py
tests/: test_motecloud_cli.py
