[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motecloud-cli"
version = "0.2.0"
description = "Zero-dependency CLI for Motecloud memory and session APIs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["motecloud", "memory", "ai", "agents", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.scripts]
motecloud = "motecloud_cli:main"

[project.urls]
Homepage = "https://github.com/motecloud/motecloud-cli#readme"
Documentation = "https://github.com/motecloud/motecloud-cli/blob/main/docs/reference/cli-install.md"
Repository = "https://github.com/motecloud/motecloud-cli"
Changelog = "https://github.com/motecloud/motecloud-cli/releases/tag/v0.2.0"
"Bug Tracker" = "https://github.com/motecloud/motecloud-cli/issues"

[tool.setuptools.packages.find]
include = ["motecloud_cli*"]
